# DSA4262

./: .gitignore  README.md  main.py  pyproject.toml
individual_assignments/: ia_1.ipynb  ia_2.html  ia_2.ipynb
