[project]
name = "dsa4262"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "torch>=2.10.0",
    "transformers[torch]>=5.2.0",
]
